<resources>

    <string name="app_name">HBYS</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="hospital">Hospital</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="comment"><b>Comment</b></string>
    <string name="default_web_client_id" translatable="false">677436375215-lqrfvijn2452goi1jjo1t0uvcganq7g9.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_call_doctor">CallDoctorActivity</string>
    <string name="title_activity_nearest_hospital">NearestHospitalActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="male">Male</string>
    <string name="drawer_open">Open Drawer Listener</string>
    <string name="drawer_close">Close Drawer Listener</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="_00">00</string>
    <string name="calculate_your_bmi">Calculate your BMI</string>
    <string name="your_bmi">Your BMI</string>
    <string name="calculate_bmi_again">Calculate BMI Again</string>
    <string name="duyuru1">Sağlık Bakanlığına bağlı tüm sağlık kurum ve kuruluşlarına muayene randevu hizmeti sunan Merkezi Hekim Randevu Sistemi (HBYS), gelişmiş teknolojiler ışığında yenilenmeye ve hizmet kalitesini artırmaya devam ediyor.</string>
    <string name="duyuru2">e-Devlet şifresi olan vatandaşlarımız, HBYS üyeliği bulunmasa bile HBYS.gov.tr adresinden e-Devlet girişiyle de HBYS nin sunduğu hizmetlerden yararlanabilmektedir.</string>
    <string name="title_activity_view_directions">ViewDirections</string>
    <string name="duyuru3">Hastaların en kolay şekilde mükemmel doktoru bulmalarını ve randevu almalarını istiyoruz. Hasta yolculuğu keyifli olmalı ve bu yüzden her zaman yanlarındayız: mümkün olan en iyi bakımı bulmalarına yardımcı olmak. Her zaman, her yerde.</string>
    <string name="duyuru4">Ayrıca doktorların uygulamalarını daha iyi yönetmelerine ve çevrimiçi itibarlarını oluşturmalarına yardımcı oluyoruz. </string>
    <string name="lightingText">Merkezi Hekim Randevu Sistemi’ndeki kişisel verileriniz KVK Kanunu’nun 28 inci maddesinin ilk fıkrasında yer alan muafiyet halleri saklı kalmak üzere, hiçbir şekilde üçüncü taraflarla paylaşılmamaktadır.</string>
    <string name="lightingText2">Merkezi Hekim Randevu Sistemi Kullanıcıları KVK Kanunu’nun 11 inci maddesinde düzenlenen haklarını, KVK Kanunu’nun 13 üncü maddesi ve Veri Sorumlusuna Başvuru Usul ve Esasları Hakkında Tebliğ hükümleri çerçevesinde Bakanlığa başvurmak suretiyle kullanabilir. </string>
</resources>