<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.TextFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MHRS'DE CEPTEN RANDEVU HATIRLATMA DÖNEMİ">

        </TextView>

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duyuru1"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_gravity="center"
            android:background="#CAF8F7"
            android:textColor="@color/black"
            android:gravity="bottom"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ÖNCELİKLİ HASTALAR UYGULAMASI">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duyuru3"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_gravity="center"
            android:background="#CAF8F7"
            android:textColor="@color/black"
            android:gravity="bottom"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MHRS e-DEVLET BULUŞMASI">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duyuru2"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_gravity="center"
            android:background="#CAF8F7"
            android:textColor="@color/black"
            android:gravity="bottom"/>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>